codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_fast_mode_enabled.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  93 actions, 0 customized, 4 unbound.

  [All]  Common  Customized (0)  Unbound (4)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript              ctrl-t
  Global         Open External Editor         ctrl-g
  Global         Copy                         ctrl-o
  Global         Clear Terminal               ctrl-l
  Global         Reload Current Session       ctrl-r
  Global         Toggle Condensed Transcript  alt-c
  Global       - Toggle Vim Mode              unbound
  Global       - Toggle Fast Mode             unbound

  left/right group · enter edit shortcut · * custom · - unbound · esc close
