codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  92 actions, 0 customized, 3 unbound.

  [All]  Common  Customized (0)  Unbound (3)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript              ctrl-t
  Global         Open External Editor         ctrl-g
  Global         Copy                         ctrl-o
  Global         Clear Terminal               ctrl-l
  Global         Reload Current Session       ctrl-r
  Global         Toggle Condensed Transcript  alt-c
  Global       - Toggle Vim Mode              unbound
  Chat           Decrease Reasoning Effort    alt-,

  left/right group · enter edit shortcut · * custom · - unbound · esc close
